--- a/walk to circle/Base.lproj/Main.storyboard
+++ b/walk to circle/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="TQL-qV-S3z">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6724" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="TQL-qV-S3z">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6711"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -289,14 +289,11 @@ Your location info never leaves your phone and stays private.</string>
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Congrats!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NKT-cv-6Fg">
-                                <rect key="frame" x="233" y="63" width="132.5" height="37"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="31"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blank_background.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="pHq-Qa-Q3O">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0YG-WS-Jdx">
-                                <rect key="frame" x="243" y="152" width="114" height="30"/>
+                                <rect key="frame" x="243" y="73" width="114" height="30"/>
                                 <state key="normal" title="Start a new walk">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -307,10 +304,12 @@ Your location info never leaves your phone and stays private.</string>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="NKT-cv-6Fg" firstAttribute="top" secondItem="2os-PS-uYQ" secondAttribute="bottom" constant="43" id="VLO-hJ-Jf1"/>
+                            <constraint firstItem="pHq-Qa-Q3O" firstAttribute="leading" secondItem="YYO-j7-YFO" secondAttribute="leading" id="6Vk-f9-4tI"/>
                             <constraint firstAttribute="centerX" secondItem="0YG-WS-Jdx" secondAttribute="centerX" id="aQZ-LB-WBD"/>
-                            <constraint firstItem="0YG-WS-Jdx" firstAttribute="top" secondItem="NKT-cv-6Fg" secondAttribute="bottom" constant="52" id="oMH-hZ-lDs"/>
-                            <constraint firstAttribute="centerX" secondItem="NKT-cv-6Fg" secondAttribute="centerX" id="ySq-cu-uuF"/>
+                            <constraint firstItem="0YG-WS-Jdx" firstAttribute="top" secondItem="2os-PS-uYQ" secondAttribute="bottom" constant="53" id="eJY-Ch-fGU"/>
+                            <constraint firstAttribute="trailing" secondItem="pHq-Qa-Q3O" secondAttribute="trailing" id="hnn-V8-Izk"/>
+                            <constraint firstItem="pHq-Qa-Q3O" firstAttribute="top" secondItem="2os-PS-uYQ" secondAttribute="top" id="smR-5p-Xqb"/>
+                            <constraint firstItem="hhZ-1D-leP" firstAttribute="top" secondItem="pHq-Qa-Q3O" secondAttribute="bottom" id="syz-vC-jvf"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -320,6 +319,7 @@ Your location info never leaves your phone and stays private.</string>
         </scene>
     </scenes>
     <resources>
+        <image name="blank_background.jpg" width="1500" height="2000"/>
         <image name="play.png" width="92" height="92"/>
         <image name="rewind.png" width="92" height="92"/>
         <image name="stop.png" width="92" height="92"/>
