--- a/walk to circle/Base.lproj/Main.storyboard
+++ b/walk to circle/Base.lproj/Main.storyboard
@@ -293,15 +293,6 @@ Your location info never leaves your phone and stays private.</string>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blank_background.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="pHq-Qa-Q3O">
                                 <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0YG-WS-Jdx">
-                                <rect key="frame" x="243" y="529" width="114" height="30"/>
-                                <state key="normal" title="Start a new walk">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="onDoneTapped:" destination="yeR-ET-AoZ" eventType="touchUpInside" id="UCs-xV-9xy"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Congrats!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JP1-gW-zfc">
                                 <rect key="frame" x="20" y="241" width="560" height="49"/>
                                 <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="30"/>
@@ -318,6 +309,16 @@ Your location info never leaves your phone and stays private.</string>
                                 <color key="shadowColor" white="0.0" alpha="0.59999999999999998" colorSpace="calibratedWhite"/>
                                 <size key="shadowOffset" width="0.0" height="1"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="92" placeholderIntrinsicHeight="92" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XgJ-VH-MF5">
+                                <rect key="frame" x="254" y="498" width="92" height="92"/>
+                                <state key="normal" image="continue.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted" image="continue_highlighted.png"/>
+                                <connections>
+                                    <action selector="onCancelTapped:" destination="weP-hj-53b" eventType="touchUpInside" id="uGf-ov-Yjb"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -326,10 +327,10 @@ Your location info never leaves your phone and stays private.</string>
                             <constraint firstItem="V4s-aw-DLv" firstAttribute="leading" secondItem="YYO-j7-YFO" secondAttribute="leadingMargin" constant="10" id="4Bp-X0-2YR"/>
                             <constraint firstAttribute="centerY" secondItem="JP1-gW-zfc" secondAttribute="bottom" constant="10" id="54x-55-YOZ"/>
                             <constraint firstItem="pHq-Qa-Q3O" firstAttribute="leading" secondItem="YYO-j7-YFO" secondAttribute="leading" id="6Vk-f9-4tI"/>
-                            <constraint firstItem="0YG-WS-Jdx" firstAttribute="top" secondItem="pHq-Qa-Q3O" secondAttribute="bottom" constant="-71" id="HCP-Em-XmU"/>
+                            <constraint firstAttribute="centerX" secondItem="XgJ-VH-MF5" secondAttribute="centerX" id="COm-lz-8cw"/>
                             <constraint firstAttribute="trailingMargin" secondItem="V4s-aw-DLv" secondAttribute="trailing" constant="10" id="SDE-ab-3OY"/>
-                            <constraint firstAttribute="centerX" secondItem="0YG-WS-Jdx" secondAttribute="centerX" id="aQZ-LB-WBD"/>
                             <constraint firstAttribute="trailing" secondItem="pHq-Qa-Q3O" secondAttribute="trailing" id="hnn-V8-Izk"/>
+                            <constraint firstItem="hhZ-1D-leP" firstAttribute="top" secondItem="XgJ-VH-MF5" secondAttribute="bottom" constant="10" id="mkK-9g-VRk"/>
                             <constraint firstItem="pHq-Qa-Q3O" firstAttribute="top" secondItem="2os-PS-uYQ" secondAttribute="top" id="smR-5p-Xqb"/>
                             <constraint firstItem="hhZ-1D-leP" firstAttribute="top" secondItem="pHq-Qa-Q3O" secondAttribute="bottom" id="syz-vC-jvf"/>
                             <constraint firstItem="JP1-gW-zfc" firstAttribute="leading" secondItem="YYO-j7-YFO" secondAttribute="leading" constant="20" id="w8N-dh-96O"/>
@@ -347,6 +348,8 @@ Your location info never leaves your phone and stays private.</string>
     </scenes>
     <resources>
         <image name="blank_background.jpg" width="1500" height="2000"/>
+        <image name="continue.png" width="92" height="92"/>
+        <image name="continue_highlighted.png" width="92" height="92"/>
         <image name="play.png" width="92" height="92"/>
         <image name="rewind.png" width="92" height="92"/>
         <image name="stop.png" width="92" height="92"/>
