--- a/walk to circle/Base.lproj/Main.storyboard
+++ b/walk to circle/Base.lproj/Main.storyboard
@@ -294,7 +294,7 @@ Your location info never leaves your phone and stays private.</string>
                                 <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Congrats!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JP1-gW-zfc">
-                                <rect key="frame" x="20" y="241" width="560" height="49"/>
+                                <rect key="frame" x="20" y="236" width="560" height="49"/>
                                 <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="30"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -302,7 +302,7 @@ Your location info never leaves your phone and stays private.</string>
                                 <size key="shadowOffset" width="0.0" height="1"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2 circles reached today" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V4s-aw-DLv">
-                                <rect key="frame" x="26" y="298" width="548" height="33"/>
+                                <rect key="frame" x="26" y="293" width="548" height="33"/>
                                 <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="20"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -320,14 +320,26 @@ Your location info never leaves your phone and stays private.</string>
                                     <action selector="onDoneTapped:" destination="yeR-ET-AoZ" eventType="touchUpInside" id="fpc-YL-rM1"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6l0-Kf-vP5">
+                                <rect key="frame" x="282" y="436" width="36" height="35"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <state key="normal" title="Play">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="onPlayTapped:" destination="yeR-ET-AoZ" eventType="touchUpInside" id="Db9-2E-Odz"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="JP1-gW-zfc" secondAttribute="trailing" constant="20" id="0H8-Vx-CZp"/>
                             <constraint firstItem="V4s-aw-DLv" firstAttribute="top" secondItem="JP1-gW-zfc" secondAttribute="bottom" constant="8" id="26e-VE-8TY"/>
                             <constraint firstItem="V4s-aw-DLv" firstAttribute="leading" secondItem="YYO-j7-YFO" secondAttribute="leadingMargin" constant="10" id="4Bp-X0-2YR"/>
-                            <constraint firstAttribute="centerY" secondItem="JP1-gW-zfc" secondAttribute="bottom" constant="10" id="54x-55-YOZ"/>
+                            <constraint firstAttribute="centerY" secondItem="JP1-gW-zfc" secondAttribute="bottom" constant="15" id="54x-55-YOZ"/>
                             <constraint firstItem="pHq-Qa-Q3O" firstAttribute="leading" secondItem="YYO-j7-YFO" secondAttribute="leading" id="6Vk-f9-4tI"/>
+                            <constraint firstItem="XgJ-VH-MF5" firstAttribute="top" secondItem="6l0-Kf-vP5" secondAttribute="bottom" constant="27" id="8jd-UN-zNJ"/>
                             <constraint firstAttribute="centerX" secondItem="XgJ-VH-MF5" secondAttribute="centerX" id="COm-lz-8cw"/>
                             <constraint firstAttribute="trailingMargin" secondItem="V4s-aw-DLv" secondAttribute="trailing" constant="10" id="SDE-ab-3OY"/>
                             <constraint firstAttribute="trailing" secondItem="pHq-Qa-Q3O" secondAttribute="trailing" id="hnn-V8-Izk"/>
@@ -335,6 +347,7 @@ Your location info never leaves your phone and stays private.</string>
                             <constraint firstItem="pHq-Qa-Q3O" firstAttribute="top" secondItem="2os-PS-uYQ" secondAttribute="top" id="smR-5p-Xqb"/>
                             <constraint firstItem="hhZ-1D-leP" firstAttribute="top" secondItem="pHq-Qa-Q3O" secondAttribute="bottom" id="syz-vC-jvf"/>
                             <constraint firstItem="JP1-gW-zfc" firstAttribute="leading" secondItem="YYO-j7-YFO" secondAttribute="leading" constant="20" id="w8N-dh-96O"/>
+                            <constraint firstAttribute="centerX" secondItem="6l0-Kf-vP5" secondAttribute="centerX" id="w8P-S1-Xe6"/>
                         </constraints>
                     </view>
                     <connections>
