--- a/walk to circle/Launch Screen.xib
+++ b/walk to circle/Launch Screen.xib
@@ -18,7 +18,7 @@
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch_scren_logo" translatesAutoresizingMaskIntoConstraints="NO" id="gVP-8q-s7d">
                     <rect key="frame" x="140" y="140" width="200" height="200"/>
                     <constraints>
-                        <constraint firstAttribute="width" relation="lessThanOrEqual" constant="200" id="EeT-ik-pKh"/>
+                        <constraint firstAttribute="width" constant="200" id="EeT-ik-pKh"/>
                         <constraint firstAttribute="width" secondItem="gVP-8q-s7d" secondAttribute="height" multiplier="1:1" id="cJ2-gh-71Z"/>
                     </constraints>
                 </imageView>
