--- a/walk to circle/Base.lproj/Main.storyboard
+++ b/walk to circle/Base.lproj/Main.storyboard
@@ -282,7 +282,7 @@ Your location info never leaves your phone and stays private.</string>
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blank_background.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="pHq-Qa-Q3O">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch_screen_background_1024x1024.png" translatesAutoresizingMaskIntoConstraints="NO" id="pHq-Qa-Q3O">
                                 <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Good job!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JP1-gW-zfc">
@@ -340,9 +340,9 @@ Your location info never leaves your phone and stays private.</string>
         </scene>
     </scenes>
     <resources>
-        <image name="blank_background.jpg" width="1500" height="2000"/>
         <image name="continue.png" width="92" height="92"/>
         <image name="continue_highlighted.png" width="92" height="92"/>
+        <image name="launch_screen_background_1024x1024.png" width="1024" height="768"/>
         <image name="play.png" width="92" height="92"/>
         <image name="rewind.png" width="92" height="92"/>
         <image name="stop.png" width="92" height="92"/>
